objects/User_Login_History__c.object
<CustomObject><fields>
        <fullName>Last_Updated_Date__c</fullName>
        <label>Last Updated Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>LogOutURL__c</fullName>
        <description>This field will contain the log out URL for the candidate.</description>
        <label>LogOutURL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Login_IP__c</fullName>
        <description>This field will store the login IP ranges.</description>
        <label>Login IP</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Page_Start_Time__c</fullName>
        <label>Page Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Session_Id__c</fullName>
        <description>This field will store the session id for the logged in user.</description>
        <externalId>true</externalId>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This object will store the user logged in history.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>User Login History</label><nameField>
        <label>User Id</label>
        <type>Text</type>
    </nameField><pluralLabel>User Login Histories</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>